Fix spacing for twenty four hour card and nav. Adjust size and color of slide buttons

--- a/src/App.css
+++ b/src/App.css
@@ -10,7 +10,6 @@
 }
 
 body {
-  /*font-size: 2em;*/
   background-image: url(https://thumbs.gfycat.com/CalmSimilarCob-size_restricted.gif) ;
   background-size: cover;
   background-filter: brightness(80%);
@@ -119,7 +118,7 @@ h2 {
   background-color: rgba(81,84,82, .8);
   border-radius: 15px;
   display: inline-block;
-  font-size: 22px;
+  font-size: 14px;
   padding: 2%;
   margin: 2%;
 }
@@ -149,15 +148,18 @@ h2 {
     flex-direction: row;
     justify-content: space-around;
     list-style: none;
+    margin-top: 5px;
 }
 
 .seven-hour,
-.ten-day-forecast {
+.ten-day-forecast,
+.twenty-four-hour {
   grid-template-rows: 1fr 5fr;
 }
 
 .seven-hour-block,
-.ten-days-block {
+.ten-days-block,
+.twentyfour-hours-block {
   grid-row: 2 / 3;
 }
 
@@ -170,9 +172,9 @@ h2 {
 
 .slider-btn {
   padding: 0;
-  font-size: 20px;
+  font-size: 60px;
   text-align: center;
-  color: #b3b3b3;
+  color: #B02032;
   width: 10%;
   margin-top: 20px;
   height: 84vh;
@@ -202,27 +204,22 @@ h2 {
   width: 40%;
 }
 
-.ten-days-block {
-
-}
-
-.ten-day-header {
-
-}
-
 .ten-day-forecast,
-.twentyfour-hours {
+.twentyfour-hour {
   display: grid;
-  grid-template-columns: repeat(auto-fit, minmax(120px, 1fr));
+  align-items: center;
 }
 
 .twentyfour-hour img {
-  width: 20px;
+  display: none;
 }
 
-.twentyfour-hour p,
-.ten-day-forecast p {
-  font-size: .7em;
+.twentyfour-hour-header {
+  margin-top: -35px;
+}
+
+.twentyfour-hour p {
+  font-size: 12px;
 }
 
 .user-input {
